--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
         <section class = first>
             <h2 class = black class = center >Начало</h2>
-            <p>Начало будет травиальным</p>
+            <p>Начало будет тривиальным</p>
             <ul>
                 <li>Родился и вырос в деревне</li>
                 <li>отучился кое-как</li>
@@ -25,7 +25,7 @@
 
         <section class = second>
             <h2 class = black>Последние 6 лет</h2>
-             <p>Зачастую работал в разных сверах обслуживания, но грезел мечтой просыпаясь рано утсром не выходить в холод, а греть чайник, заваривать кофеёк и содитсья работать за комп. Так малу по малу выдалась такая возможность, однако когда понял что выбрал не ту сферу, возможность закончилась и пришлось вернуться на старую дорожку. Когда уже люди до конца надаели, ушёл на завод к отцу. Спустя какое-то время снова появилась возможность заняться обучением и уже здесь с мешком опыта за прошлые шишки и сильным чувством долга он вступил на новую тропу... </p>
+             <p>Зачастую работал в разных сферах обслуживания, но грезил мечтой просыпаясь рано утром не выходить в холод, а греть чайник, заваривать кофеёк и садитсья работать за комп. Так малу по малу выдалась такая возможность, однако когда понял что выбрал не ту сферу, возможность закончилась и пришлось вернуться на старую дорожку. Когда уже люди до конца надоели, ушёл на завод к отцу. Спустя какое-то время снова появилась возможность заняться обучением и уже здесь с мешком опыта за прошлые шишки и сильным чувством долга он вступил на новую тропу... </p>
         </section>
 
         <section class = three>
